# wakatools

./: .buildinfo  .gitignore  README.md  api_reference.html  genindex.html  index.html  objects.inv  pixi.toml  pyproject.toml  search.html  searchindex.js  user_guide.html
.doctrees/: api_reference.doctree  environment.pickle  index.doctree  user_guide.doctree
.doctrees/api_reference/: interpolation.doctree  parameters.doctree  read.doctree  utils.doctree  waka_accessors.doctree
.github/_disabled_workflows/: ci.yml  docs.yml  publish.yml
.github/workflows/: CI.yml  docs.yml
_modules/: index.html
_modules/wakatools/: base.html  interpolation.html  read.html
_modules/wakatools/io/: kingdom_exports.html  read.html
_sources/: api_reference.md.txt  user_guide.md.txt
_sources/api_reference/: utils.rst.txt
api_reference/: interpolation.html  parameters.html  read.html  utils.html  waka_accessors.html
docs/: api_reference.md  conf.py  index.md
docs/_static/: theme-deltares.css
docs/api_reference/: interpolation.rst  parameters.rst  read.rst  waka_accessors.rst
src/wakatools/: __init__.py  base.py  constants.py  interpolation.py  io.py  parameters.py  read.py  utils.py  validation.py
src/wakatools/io/: kingdom_exports.py  monitoringwells.py  read.py
src/wakatools/util/: conversion.py  spatial.py
src/wakatools/utils/: __init__.py  conversion.py  scaling.py  spatial.py
tests/: conftest.py  test_base.py  test_interpolation.py  test_io.py  test_kingdom_exports.py  test_parameters.py  test_read.py  test_utils.py  test_validate.py
tests/testdata/: 87078_HB008.xml  87078_HB009.xml
