[project]
authors = [{name = "smknaake", email = "bas.knaake@deltares.nl"}]
description = "Tools for channel-bottom analysis and classification."
dynamic = ["version"]
license = {file = "LICENSE"}
keywords = [
  "Channel bottoms",
  "River morphology",
  "Deltares",
]
dependencies = [
  "numpy",
  "scipy",
  "pandas",
  "geopandas",
  "rioxarray",
  "xarray",
  "shapely",
  "geost",
]
name = "wakatools"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
	"Topic :: Scientific/Engineering",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: 3.13",
	"Programming Language :: Python :: 3.14",
]
requires-python = ">= 3.12"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.version]
path = "src/wakatools/__init__.py"

[tool.hatch.build.targets.sdist]
only-include = ["src/wakatools", "tests"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
markers = [
	"unittest: test of single component",
	"integrationtest: test of multiple components",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = ["F", "E", "W", "N", "I001", "NPY201"]
ignore = ["F401", "E501", "F811"]
unfixable = ["F401"]
pydocstyle.convention = "numpy"
